@@ -1,3 +1,8 @@
+2006-12-19  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/installer.rb (Gem::ExtBuilder): Refactored for
+	uniformity.
+
 2006-12-18  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/gem_commands (Gem::OutdatedCommand): Add a way to see
